# MoQ-Test-Tools

./: .env.example  .gitignore  README.md  package-lock.json  package.json  requirements.txt
docs/: ARCHITECTURE.md  GO-LIVE-CHECKLIST.md  LOCAL-PUBLISHER.md  METRICS.md  RTMP-STARTUP.md
ingest_agent/: cmaf_integrity.py  config.py  host_metrics.py  main.py  recording_service.py  requirements.txt  vmaf_service.py
publisher_agent/: __init__.py  __main__.py  agent.py  deps.py
results/: benchmark_20260223-205757.csv
scripts/: dev.sh  diagnose-playback.sh  e2e-dual-vmaf-test.py  e2e_ingest_matrix_test.py  ensure-publisher-tools.sh  go-live-overnight.py  install-ingest-vmaf-remote.sh  install-moq5-recorder.sh  install-moq5.sh  install-openmoq-publisher.sh  install-openmoq-recorder.sh  install-playa.sh  playback-verdict.sh  prod_qa_auto_players.py  run-local-publisher.sh  smoke-local-publisher.sh  start-api.sh  sync-ingest-agent-env.sh  test-metric-model.mjs  test-webcam-capture-ordering.mjs  test-webcam-open-stream-fallback.mjs  test_mediamtx_live.sh  troubleshoot-playback.sh  validate_zixi_fast_hls_offset.sh  verify-zixi-srt-ingest.sh
src/: cmaf_integrity.py  destinations.py  encode_profile.py  encoder_capture.py  endpoint_probe.py  gcp_host_metrics.py  ingest_agent_client.py  ingest_host.py  ingest_host_metrics.py  media_health.py  mediamtx_stats.py  metrics.py  moq_publish.py  moqx_stats.py  network_metrics.py  path_rtt.py  picoquic_qlog.py  playback_metrics.py  publisher.py  publisher_protocol.py  quality_metrics.py  remote_vmaf.py  runner.py  srt_stats.py  stats_window.py  system_metrics.py  upload_service.py  vmaf_score.py  zixi_error_concealment.py  zixi_hls_health.py  zixi_input_reset.py  zixi_stats.py  zixi_ts_offset.py
tests/: test_device_webcam.py  test_endpoint_probe.py  test_job_manager_preview_gate.py  test_local_publisher_api_gates.py  test_mediamtx_loopback_and_whip_audio.py  test_mediamtx_stats.py  test_moq_gop_latency.py  test_moq_preview_ready_grace.py  (+9 more)
tools/moq5-publisher/: CMakeLists.txt  main.c
tools/moq5-recorder/: CMakeLists.txt  main.c
(+142 files in other folders)
